fixes cropper

--- a/app/assets/stylesheets/admin/forms.css.scss
+++ b/app/assets/stylesheets/admin/forms.css.scss
@@ -1,9 +1,6 @@
 .form-actions {
   margin-top: 20px;
-  padding: {
-    top: 20px;
-    bottom: 20px;
-  }
+  padding: 15px;
   border-top: 1px solid #eee;
   background-color: #f5f5f5;
 }
